Fixed horizontal overflow causing gray strip

--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,9 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
-
+html, body {
+  overflow-x: hidden;
+}
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
